Fixed squashed home screen on mobile

--- a/styles.css
+++ b/styles.css
@@ -109,7 +109,7 @@ html, body {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    height: 90vh;
+    min-height: 90vh;
     padding: 1em;
     font-size: 1.2em;
 }
@@ -158,7 +158,7 @@ html, body {
         padding: 0;
         color: black;
         font-size: 2em;
-        padding-right: 45px;
+        margin-right: 45px;
     }
 
     .main-header.responsive {
